--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 <link rel="stylesheet" href="./style.css">
 </head>
   <body>
-    <div class="title"><h1>wellcom</h1></div>
+    <ins class="kakao_ad_area" style="display:none;"
+ data-ad-unit    = "DAN-Z96AcRAVbFwFSobV"
+ data-ad-width   = "300"
+ data-ad-height  = "250"></ins>
+<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
     <h2>배너 클릭시 사이트로 연결. Update : 2022.08.15</h2>
       <div class="main">
         <div class="left"></div>
