--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="imagetoolbar" content="no">
+  <meta name="naver-site-verification" content="d7842e79fe9f4de2562973aacbb00d97022f47ee" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>링크노리 - TOP.7 무료 웹툰 전문 링크 사이트</title>
 <meta name="keywords" content="웹툰,툰코,펀비,뉴토끼,늑대닷컴,섹툰,밤토끼,블랙툰,toonkor,funbe,newtoki,wfwf,sektoon,bamco,blacktoon" />
@@ -16,8 +16,8 @@
       data-ad-unit    = "DAN-Z96AcRAVbFwFSobV"
       data-ad-width   = "300"
       data-ad-height  = "250"></ins>
+      <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
     </div>
-<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
     <h2>배너 클릭시 사이트로 연결. Update : 2022.08.15</h2>
       <div class="main">
         <div class="left">
