--- a/index.html
+++ b/index.html
@@ -12,12 +12,32 @@
 </head>
   <body>
     <div class="ad-ba">
-
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1079694147079460"
+           crossorigin="anonymous"></script>
+      <!-- 링크노리-상단 -->
+      <ins class="adsbygoogle"
+           style="display:block"
+           data-ad-client="ca-pub-1079694147079460"
+           data-ad-slot="1670186927"
+           data-ad-format="auto"
+           data-full-width-responsive="true"></ins>
+      <script>
+           (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
     </div>
     <h2>배너 클릭시 사이트로 연결. Update : 2022.08.15</h2>
       <div class="main">
         <div class="left">
-
+          <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1079694147079460"
+               crossorigin="anonymous"></script>
+          <ins class="adsbygoogle"
+               style="display:block"
+               data-ad-format="autorelaxed"
+               data-ad-client="ca-pub-1079694147079460"
+               data-ad-slot="6156226842"></ins>
+          <script>
+               (adsbygoogle = window.adsbygoogle || []).push({});
+          </script>
         </div>
         <div class="center">
           <div class="box box1">
@@ -50,10 +70,19 @@
             <h3>블랙툰</h3></div>
         </div>
         <div class="right">
-          
+          <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1079694147079460"
+               crossorigin="anonymous"></script>
+          <!-- 링크노리-우측 -->
+          <ins class="adsbygoogle"
+               style="display:block"
+               data-ad-client="ca-pub-1079694147079460"
+               data-ad-slot="9903900166"
+               data-ad-format="auto"
+               data-full-width-responsive="true"></ins>
+          <script>
+               (adsbygoogle = window.adsbygoogle || []).push({});
+          </script>
         </div>
-
-
       </div>
     <footer>Copyrightⓒ LinkNori.com. All rights reserved.</footer>
   </body>
