--- a/index.html
+++ b/index.html
@@ -3,9 +3,28 @@
 <head>
   <meta charset="utf-8">
   <meta name="naver-site-verification" content="d7842e79fe9f4de2562973aacbb00d97022f47ee" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=0,maximum-scale=10">
+<meta http-equiv="X-UA-Compatible" content="IE=Edge">
+<meta name="NaverBot" content="All"/>
+<meta name="NaverBot" content="index,follow"/>
+<meta name="Yeti" content="All"/>
+<meta name="Yeti" content="index,follow"/>
+<meta name="title" content="링크노리 - 무료 웹툰 전문 링크 사이트" />
+<meta name="publisher" content="링크노리 - 무료 웹툰 전문 링크 사이트" />
+<meta name="author" content="링크노리 - 무료 웹툰 전문 링크 사이트" />
+<meta name="robots" content="index,follow" />
+<meta name="keywords" content="링크노리,linknori,무료웹툰,무료 웹툰,웹툰,툰코,펀비,뉴토끼,늑대닷컴,섹툰,밤토끼,블랙툰,toonkor,funbe,newtoki,wfwf,sektoon,bamco,blacktoon" />
+<meta name="description" content="링크노리,linknori,무료웹툰,무료 웹툰,웹툰,툰코,펀비,뉴토끼,늑대닷컴,섹툰,밤토끼,블랙툰,toonkor,funbe,newtoki,wfwf,sektoon,bamco,blacktoon" />
+<meta property="og:title" content="링크노리 - 무료 웹툰 전문 링크 사이트" />
+<meta property="og:site_name" content="링크노리 - 무료 웹툰 전문 링크 사이트" />
+<meta property="og:author" content="링크노리 - 무료 웹툰 전문 링크 사이트" />
+<meta property="og:type" content="" />
+<meta property="og:image" content="" />
+<meta property="og:description" content="링크노리,linknori,무료웹툰,무료 웹툰,웹툰,툰코,펀비,뉴토끼,늑대닷컴,섹툰,밤토끼,블랙툰,toonkor,funbe,newtoki,wfwf,sektoon,bamco,blacktoon" />
+<meta property="og:url" content="" />
+<link rel="image_src" href="" />
+<link rel="canonical" href="" />
   <title>링크노리 - TOP.7 무료 웹툰 전문 링크 사이트</title>
-<meta name="keywords" content="웹툰,툰코,펀비,뉴토끼,늑대닷컴,섹툰,밤토끼,블랙툰,toonkor,funbe,newtoki,wfwf,sektoon,bamco,blacktoon" />
 <meta property="og:locale" content="ko_KR" />
 <meta property="og:type" content="website" />
 <link rel="stylesheet" href="./style.css">
