--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 <meta name="author" content="링크노리 - 무료 웹툰 전문 링크 사이트" />
 <meta name="robots" content="index,follow" />
 <meta name="keywords" content="링크노리,linknori,무료웹툰,무료 웹툰,웹툰,툰코,펀비,뉴토끼,늑대닷컴,섹툰,밤토끼,블랙툰,toonkor,funbe,newtoki,wfwf,sektoon,bamco,blacktoon" />
-<meta name="description" content="링크노리,linknori,무료웹툰,무료 웹툰,웹툰,툰코,펀비,뉴토끼,늑대닷컴,섹툰,밤토끼,블랙툰,toonkor,funbe,newtoki,wfwf,sektoon,bamco,blacktoon" />
+<meta name="description" content="링크노리,linknori,무료웹툰,무료 웹툰,웹툰,툰코,펀비,뉴토끼,늑대닷컴,섹툰,밤토끼,블랙툰" />
 <meta property="og:title" content="링크노리 - 무료 웹툰 전문 링크 사이트" />
 <meta property="og:site_name" content="링크노리 - 무료 웹툰 전문 링크 사이트" />
 <meta property="og:author" content="링크노리 - 무료 웹툰 전문 링크 사이트" />
 <meta property="og:type" content="" />
 <meta property="og:image" content="" />
-<meta property="og:description" content="링크노리,linknori,무료웹툰,무료 웹툰,웹툰,툰코,펀비,뉴토끼,늑대닷컴,섹툰,밤토끼,블랙툰,toonkor,funbe,newtoki,wfwf,sektoon,bamco,blacktoon" />
+<meta property="og:description" content="링크노리,linknori,무료웹툰,무료 웹툰,웹툰,툰코,펀비,뉴토끼,늑대닷컴,섹툰,밤토끼,블랙툰" />
 <meta property="og:url" content="" />
 <link rel="image_src" href="" />
 <link rel="canonical" href="" />
