--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
       <script>
            (adsbygoogle = window.adsbygoogle || []).push({});
       </script>
+      <a href="https://link.coupang.com/a/vOTYg" target="_blank" referrerpolicy="unsafe-url"><img src="https://ads-partners.coupang.com/banners/600686?subId=&traceId=V0-301-879dd1202e5c73b2-I600686&w=320&h=100" alt=""></a>
     </div>
     <h2>배너 클릭시 사이트로 연결. Update : 2022.08.15</h2>
       <div class="main">
