--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="utf-8">
+  <meta name="google-site-verification" content="OpmjA3vf0VVI2rA4emjiFnPxHIs4AiC30eSeIBLWT3o" />
   <meta name="naver-site-verification" content="d7842e79fe9f4de2562973aacbb00d97022f47ee" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=0,maximum-scale=10">
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
