--- a/index.html
+++ b/index.html
@@ -63,31 +63,31 @@
         <div class="center">
           <div class="box box1">
             <a href="https://toonkor134.com/" target=_blank>
-            <img src="./img/site-1-toonkor.png" alt="툰코" title="툰코"></a>
+            <img src="./img/webtoon/site-1-toonkor.png" alt="툰코" title="툰코"></a>
             <h3>툰 코</h3></div>
           <div class="box box2">
             <a href="https://funbe154.com/" target=_blank>
-            <img src="./img/site-2-funbe.png" alt="펀비" title="펀비"></a>
+            <img src="./img/webtoon/site-2-funbe.png" alt="펀비" title="펀비"></a>
             <h3>펀 비</h3></div>
           <div class="box box3">
             <a href="https://newtoki148.com/" target=_blank>
-            <img src="./img/site-3-newtoki.png" alt="뉴토끼" title="뉴토끼"></a>
+            <img src="./img/webtoon/site-3-newtoki.png" alt="뉴토끼" title="뉴토끼"></a>
             <h3>뉴토끼</h3></div>
           <div class="box box4">
             <a href="https://wfwf220.com/" target=_blank>
-            <img src="./img/site-4-wfwf.png" alt="늑대닷컴" title="늑대닷컴"></a>
+            <img src="./img/webtoon/site-4-wfwf.png" alt="늑대닷컴" title="늑대닷컴"></a>
             <h3>늑대닷컴</h3></div>
           <div class="box box5">
             <a href="https://sektoon20.org/" target=_blank>
-            <img src="./img/site-5-sektoon.png" alt="섹툰" title="섹툰"></a>
+            <img src="./img/webtoon/site-5-sektoon.png" alt="섹툰" title="섹툰"></a>
             <h3>섹툰</h3></div>
           <div class="box box6">
             <a href="https://bam273co.com/" target=_blank>
-            <img src="./img/site-6-bamco.png" alt="밤토끼" title="밤토끼"></a>
+            <img src="./img/webtoon/site-6-bamco.png" alt="밤토끼" title="밤토끼"></a>
             <h3>밤토끼</h3></div>
           <div class="box box7">
             <a href="https://blacktoon180.com/" target=_blank>
-            <img src="./img/site-7-blacktoon.png" alt="블랙툰" title="블랙툰"></a>
+            <img src="./img/webtoon/site-7-blacktoon.png" alt="블랙툰" title="블랙툰"></a>
             <h3>블랙툰</h3></div>
         </div>
         <div class="right">
