--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="ko">
 <head>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1079694147079460"
+ crossorigin="anonymous"></script>
   <meta charset="utf-8">
   <meta name="google-site-verification" content="OpmjA3vf0VVI2rA4emjiFnPxHIs4AiC30eSeIBLWT3o" />
   <meta name="naver-site-verification" content="d7842e79fe9f4de2562973aacbb00d97022f47ee" />
