--- a/index.html
+++ b/index.html
@@ -12,22 +12,22 @@
 <meta name="NaverBot" content="index,follow"/>
 <meta name="Yeti" content="All"/>
 <meta name="Yeti" content="index,follow"/>
-<meta name="title" content="링크노리 - 무료웹툰 전문 링크 사이트" />
-<meta name="publisher" content="링크노리 - 무료웹툰 전문 링크 사이트" />
+<meta name="title" content="링크노리 - 무료웹툰,토렌트 링크 사이트" />
+<meta name="publisher" content="링크노리 - 무료웹툰,토렌트 링크 사이트" />
 <meta name="author" content="링크노리 - 무료웹툰 전문 링크 사이트" />
 <meta name="robots" content="index,follow" />
-<meta name="keywords" content="링크노리,linknori,무료웹툰,무료 웹툰,웹툰,툰코,펀비,뉴토끼,늑대닷컴,섹툰,밤토끼,블랙툰,toonkor,funbe,newtoki,wfwf,sektoon,bamco,blacktoon" />
-<meta name="description" content="링크노리,linknori,무료웹툰,무료 웹툰,웹툰,툰코,펀비,뉴토끼,늑대닷컴,섹툰,밤토끼,블랙툰" />
-<meta property="og:title" content="링크노리 - 무료웹툰 전문 링크 사이트" />
-<meta property="og:site_name" content="링크노리 - 무료웹툰 전문 링크 사이트" />
-<meta property="og:author" content="링크노리 - 무료웹툰 전문 링크 사이트" />
+<meta name="keywords" content="링크노리,linknori,무료웹툰,토렌트,torrent,torrentqq,웹툰,툰코,펀비,뉴토끼,늑대닷컴,섹툰,밤토끼,블랙툰,torrent" />
+<meta name="description" content="링크노리,linknori,무료웹툰,토렌트,torrent,torrentqq,웹툰,툰코,펀비,뉴토끼,늑대닷컴,섹툰,밤토끼,블랙툰" />
+<meta property="og:title" content="링크노리 - 무료웹툰,토렌트 전문 링크 사이트" />
+<meta property="og:site_name" content="링크노리 - 무료웹툰,토렌트 전문 링크 사이트" />
+<meta property="og:author" content="링크노리 - 무료웹툰,토렌트 전문 링크 사이트" />
 <meta property="og:type" content="" />
 <meta property="og:image" content="" />
-<meta property="og:description" content="링크노리,linknori,무료웹툰,무료 웹툰,웹툰,툰코,펀비,뉴토끼,늑대닷컴,섹툰,밤토끼,블랙툰" />
+<meta property="og:description" content="링크노리,linknori,무료웹툰,토렌트,torrent,torrentqq,웹툰,툰코,펀비,뉴토끼,늑대닷컴,섹툰,밤토끼,블랙툰" />
 <meta property="og:url" content="" />
 <link rel="image_src" href="" />
 <link rel="canonical" href="" />
-  <title>링크노리 - TOP.7 무료 웹툰 전문 링크 사이트</title>
+  <title>링크노리 - TOP.7 무료웹툰,토렌트 전문 링크 사이트</title>
 <meta property="og:locale" content="ko_KR" />
 <meta property="og:type" content="website" />
 <link rel="stylesheet" href="./style.css">
@@ -48,6 +48,11 @@
       </script>
       <a href="https://link.coupang.com/a/vOTYg" target="_blank" referrerpolicy="unsafe-url"><img src="https://ads-partners.coupang.com/banners/600686?subId=&traceId=V0-301-879dd1202e5c73b2-I600686&w=320&h=100" alt=""></a>
     </div>
+      <div class="toolbar">
+      <div class="tool1"><a href="https://linknori.netlify.app/"><h3>WebToon</h3></a></div>
+      <div class="tool1"><a href="https://linknori.netlify.app/torrent.html"><h3>Torrent</h3></a></div>
+      <div class="tool1"><h3>YouTube</h3></div>
+      </div>
     <h2>배너 클릭시 사이트로 연결. Update : 2022.08.15</h2>
       <div class="main">
         <div class="left">
