--- a/torrent.html
+++ b/torrent.html
@@ -33,27 +33,16 @@
 <link rel="stylesheet" href="./style.css">
 </head>
   <body>
-    <div class="ad-ba">
-      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1079694147079460"
-           crossorigin="anonymous"></script>
-      <!-- 링크노리-상단 -->
-      <ins class="adsbygoogle"
-           style="display:block"
-           data-ad-client="ca-pub-1079694147079460"
-           data-ad-slot="1670186927"
-           data-ad-format="auto"
-           data-full-width-responsive="true"></ins>
-      <script>
-           (adsbygoogle = window.adsbygoogle || []).push({});
-      </script>
+    <div class="title">
+    <h3>링크노리는 원하는 웹툰, 토렌트를 빠르게 접근할수 있는 링크 전문 사이트 입니다.</h3>
+    </div>
       <a href="https://link.coupang.com/a/vOTYg" target="_blank" referrerpolicy="unsafe-url"><img src="https://ads-partners.coupang.com/banners/600686?subId=&traceId=V0-301-879dd1202e5c73b2-I600686&w=320&h=100" alt=""></a>
     </div>
       <div class="toolbar">
       <div class="tool1"><a href="https://linknori.netlify.app/"><h3>WebToon</h3></a></div>
       <div class="tool1"><a href="https://linknori.netlify.app/torrent.html"><h3>Torrent</h3></a></div>
-      <div class="tool1"><h3>YouTube</h3></div>
       </div>
-    <h2>배너 클릭시 사이트로 연결. Update : 2022.08.15</h2>
+    <h2>배너 클릭시 사이트로 연결. Update : 2022.08.18</h2>
       <div class="main">
         <div class="left">
           <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1079694147079460"
@@ -69,7 +58,7 @@
         </div>
         <div class="center">
           <div class="box box1">
-            <a href="https://torrentqq217.com/" target=_blank>
+            <a href="https://torrentqq218.com/" target=_blank>
             <img src="./img/torrent/t-1-torrentqq.png" alt="툰코" title="툰코"></a>
             <h3>토렌트큐큐</h3></div>
           <div class="box box2">
@@ -77,7 +66,7 @@
             <img src="./img/torrent/t-2-Etorrent.png" alt="펀비" title="펀비"></a>
             <h3>이토렌트</h3></div>
           <div class="box box3">
-            <a href="https://www.todawa79.top/" target=_blank>
+            <a href="https://www.todawa80.top/" target=_blank>
             <img src="./img/torrent/t-3-todawa.png" alt="뉴토끼" title="뉴토끼"></a>
             <h3>토다와</h3></div>
           <div class="box box4">
