--- a/index.html
+++ b/index.html
@@ -33,27 +33,16 @@
 <link rel="stylesheet" href="./style.css">
 </head>
   <body>
-    <div class="ad-ba">
-      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1079694147079460"
-           crossorigin="anonymous"></script>
-      <!-- 링크노리-상단 -->
-      <ins class="adsbygoogle"
-           style="display:block"
-           data-ad-client="ca-pub-1079694147079460"
-           data-ad-slot="1670186927"
-           data-ad-format="auto"
-           data-full-width-responsive="true"></ins>
-      <script>
-           (adsbygoogle = window.adsbygoogle || []).push({});
-      </script>
+    <div class="title">
+    <h3>링크노리는 원하는 웹툰, 토렌트를 빠르게 접근할수 있는 링크 전문 사이트 입니다.</h3>
+    </div>
       <a href="https://link.coupang.com/a/vOTYg" target="_blank" referrerpolicy="unsafe-url"><img src="https://ads-partners.coupang.com/banners/600686?subId=&traceId=V0-301-879dd1202e5c73b2-I600686&w=320&h=100" alt=""></a>
     </div>
       <div class="toolbar">
       <div class="tool1"><a href="https://linknori.netlify.app/"><h3>WebToon</h3></a></div>
       <div class="tool1"><a href="https://linknori.netlify.app/torrent.html"><h3>Torrent</h3></a></div>
-      <div class="tool1"><h3>YouTube</h3></div>
       </div>
-    <h2>배너 클릭시 사이트로 연결. Update : 2022.08.15</h2>
+    <h2>배너 클릭시 사이트로 연결. Update : 2022.08.18</h2>
       <div class="main">
         <div class="left">
           <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1079694147079460"
@@ -69,11 +58,11 @@
         </div>
         <div class="center">
           <div class="box box1">
-            <a href="https://toonkor134.com/" target=_blank>
+            <a href="https://toonkor135.com/" target=_blank>
             <img src="./img/webtoon/site-1-toonkor.png" alt="툰코" title="툰코"></a>
             <h3>툰 코</h3></div>
           <div class="box box2">
-            <a href="https://funbe154.com/" target=_blank>
+            <a href="https://funbe155.com/" target=_blank>
             <img src="./img/webtoon/site-2-funbe.png" alt="펀비" title="펀비"></a>
             <h3>펀 비</h3></div>
           <div class="box box3">
@@ -81,7 +70,7 @@
             <img src="./img/webtoon/site-3-newtoki.png" alt="뉴토끼" title="뉴토끼"></a>
             <h3>뉴토끼</h3></div>
           <div class="box box4">
-            <a href="https://wfwf220.com/" target=_blank>
+            <a href="https://wfwf221.com/" target=_blank>
             <img src="./img/webtoon/site-4-wfwf.png" alt="늑대닷컴" title="늑대닷컴"></a>
             <h3>늑대닷컴</h3></div>
           <div class="box box5">
@@ -89,7 +78,7 @@
             <img src="./img/webtoon/site-5-sektoon.png" alt="섹툰" title="섹툰"></a>
             <h3>섹툰</h3></div>
           <div class="box box6">
-            <a href="https://bam273co.com/" target=_blank>
+            <a href="https://bam274co.com/" target=_blank>
             <img src="./img/webtoon/site-6-bamco.png" alt="밤토끼" title="밤토끼"></a>
             <h3>밤토끼</h3></div>
           <div class="box box7">
