--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1079694147079460"
        crossorigin="anonymous"></script>
   <meta charset="utf-8">
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7W8H2G6KEJ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7W8H2G6KEJ');
+</script>
   <meta name="google-site-verification" content="OpmjA3vf0VVI2rA4emjiFnPxHIs4AiC30eSeIBLWT3o" />
   <meta name="naver-site-verification" content="d7842e79fe9f4de2562973aacbb00d97022f47ee" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=0,maximum-scale=10">
