--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
       <a href="https://link.coupang.com/a/vOTYg" target="_blank" referrerpolicy="unsafe-url"><img src="https://ads-partners.coupang.com/banners/600686?subId=&traceId=V0-301-879dd1202e5c73b2-I600686&w=320&h=100" alt=""></a>
     </div>
       <div class="toolbar">
-      <div class="tool1"><a href="https://linknori.netlify.app/"><h3>WebToon</h3></a></div>
-      <div class="tool1"><a href="https://linknori.netlify.app/torrent.html"><h3>Torrent</h3></a></div>
+      <div class="btn"><a href="https://linknori.netlify.app/"><h3>WebToon</h3></a></div>
+      <div class="btn"><a href="https://linknori.netlify.app/torrent.html"><h3>Torrent</h3></a></div>
       </div>
-    <h2>배너 클릭시 사이트로 연결. Update : 2022.08.18</h2>
+    <h2>배너 클릭시 사이트로 연결. Update : 2022.08.20</h2>
       <div class="main">
         <div class="left">
           <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1079694147079460"
@@ -68,15 +68,15 @@
         </div>
         <div class="center">
           <div class="box box1">
-            <a href="https://toonkor135.com/" target=_blank>
+            <a href="https://toonkor136.com/" target=_blank>
             <img src="./img/webtoon/site-1-toonkor.png" alt="툰코" title="툰코"></a>
             <h3>툰 코</h3></div>
           <div class="box box2">
-            <a href="https://funbe155.com/" target=_blank>
+            <a href="https://funbe156.com/" target=_blank>
             <img src="./img/webtoon/site-2-funbe.png" alt="펀비" title="펀비"></a>
             <h3>펀 비</h3></div>
           <div class="box box3">
-            <a href="https://newtoki148.com/" target=_blank>
+            <a href="https://newtoki149.com/" target=_blank>
             <img src="./img/webtoon/site-3-newtoki.png" alt="뉴토끼" title="뉴토끼"></a>
             <h3>뉴토끼</h3></div>
           <div class="box box4">
