--- a/torrent.html
+++ b/torrent.html
@@ -49,8 +49,8 @@
       <a href="https://link.coupang.com/a/vOTYg" target="_blank" referrerpolicy="unsafe-url"><img src="https://ads-partners.coupang.com/banners/600686?subId=&traceId=V0-301-879dd1202e5c73b2-I600686&w=320&h=100" alt=""></a>
     </div>
       <div class="toolbar">
-      <div class="tool1"><a href="https://linknori.netlify.app/"><h3>WebToon</h3></a></div>
-      <div class="tool1"><a href="https://linknori.netlify.app/torrent.html"><h3>Torrent</h3></a></div>
+      <div class="btn"><a href="https://linknori.netlify.app/"><h3>WebToon</h3></a></div>
+      <div class="btn"><a href="https://linknori.netlify.app/torrent.html"><h3>Torrent</h3></a></div>
       </div>
     <h2>배너 클릭시 사이트로 연결. Update : 2022.08.18</h2>
       <div class="main">
