--- a/torrent.html
+++ b/torrent.html
@@ -46,8 +46,12 @@
     <h3>링크노리는 원하는 웹툰, 토렌트를 빠르게 접근할수 있는 링크 전문 사이트 입니다.</h3>
     </div>
     <div class="top">
-      <a href="https://link.coupang.com/a/vOTYg" target="_blank" referrerpolicy="unsafe-url"><img src="https://ads-partners.coupang.com/banners/600686?subId=&traceId=V0-301-879dd1202e5c73b2-I600686&w=320&h=100" alt=""></a>
-    </div>
+        <script src="https://ads-partners.coupang.com/g.js"></script>
+        <script>
+        	new PartnersCoupang.G({"id":601589,"template":"carousel","trackingCode":"AF4799046","width":"680","height":"240"});
+        </script>
+        <iframe src="https://coupa.ng/cc2QVR" width="120" height="240" frameborder="0" scrolling="no" referrerpolicy="unsafe-url"></iframe>
+      </div>
       <div class="toolbar">
       <div class="btn"><a href="https://linknori.netlify.app/"><h3>WebToon</h3></a></div>
       <div class="btn"><a href="https://linknori.netlify.app/torrent.html"><h3>Torrent</h3></a></div>
@@ -111,6 +115,9 @@
           </script>
         </div>
       </div>
+      <div class="bottom">
+            <a href="https://link.coupang.com/a/walJn" target="_blank" referrerpolicy="unsafe-url"><img src="https://ads-partners.coupang.com/banners/601596?subId=&traceId=V0-301-371ae01f4226dec2-I601596&w=728&h=90" alt=""></a>
+      "이 포스팅은 쿠팡 파트너스 활동의 일환으로, 이에 따른 일정액의 수수료를 제공받습니다."</div>
     <footer>Copyrightⓒ LinkNori.com. All rights reserved.</footer>
   </body>
 </html>
