--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </script>
   <meta name="google-site-verification" content="OpmjA3vf0VVI2rA4emjiFnPxHIs4AiC30eSeIBLWT3o" />
   <meta name="naver-site-verification" content="d7842e79fe9f4de2562973aacbb00d97022f47ee" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=0,maximum-scale=10">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 <meta name="NaverBot" content="All"/>
 <meta name="NaverBot" content="index,follow"/>
