--- a/index.html
+++ b/index.html
@@ -101,18 +101,11 @@
             <h3>블랙툰</h3></div>
         </div>
         <div class="right">
-          <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1079694147079460"
-               crossorigin="anonymous"></script>
-          <!-- 링크노리-우측 -->
-          <ins class="adsbygoogle"
-               style="display:block"
-               data-ad-client="ca-pub-1079694147079460"
-               data-ad-slot="9903900166"
-               data-ad-format="auto"
-               data-full-width-responsive="true"></ins>
-          <script>
-               (adsbygoogle = window.adsbygoogle || []).push({});
-          </script>
+          <div class="name"><h3>유튜브 바로가기</h3></div>
+          <h4>↓↓ 블랙핑크 - 핑크베놈/ BLACKPINK - Pink Venom M/V ↓↓</h4>
+          <a href="https://www.youtube.com/watch?v=gQlMMD8auMs" target=_blank>[ https://www.youtube.com/watch?v=gQlMMD8auMs ]</a>
+          <h4>↓↓ 에스파 - 도깨비불 / aespa - Illusion ↓↓</h4>
+          <a href="https://www.youtube.com/watch?v=h7pDGP1XjZM">[ https://www.youtube.com/watch?v=h7pDGP1XjZM ]</a>
         </div>
       </div>
       <div class="bottom">
