--- a/torrent.html
+++ b/torrent.html
@@ -25,8 +25,8 @@
 <meta name="publisher" content="링크노리 - 무료웹툰,토렌트 링크 사이트" />
 <meta name="author" content="링크노리 - 무료웹툰 전문 링크 사이트" />
 <meta name="robots" content="index,follow" />
-<meta name="keywords" content="링크노리,linknori,무료웹툰,토렌트,torrent,torrentqq,웹툰,툰코,펀비,뉴토끼,늑대닷컴,섹툰,밤토끼,블랙툰,torrent" />
-<meta name="description" content="링크노리,linknori,무료웹툰,토렌트,torrent,torrentqq,웹툰,툰코,펀비,뉴토끼,늑대닷컴,섹툰,밤토끼,블랙툰" />
+<meta name="keywords" content="링크노리,linknori,무료웹툰,토렌트,torrent,torrentqq,웹툰,툰코,펀비,늑대닷컴,섹툰,블랙핑크,에스파,balckpink,aespa" />
+<meta name="description" content="링크노리,linknori,무료웹툰,토렌트,torrent,torrentqq,웹툰,툰코,펀비,늑대닷컴,섹툰,블랙핑크,에스파,balckpink,aespa" />
 <meta property="og:title" content="링크노리 - 무료웹툰,토렌트 전문 링크 사이트" />
 <meta property="og:site_name" content="링크노리 - 무료웹툰,토렌트 전문 링크 사이트" />
 <meta property="og:author" content="링크노리 - 무료웹툰,토렌트 전문 링크 사이트" />
