--- a/torrent.html
+++ b/torrent.html
@@ -102,15 +102,15 @@
         </div>
         <div class="right">
           <div class="name"><h3>유튜브 바로가기</h3></div>
-          <h4>↓↓ 블랙핑크 - 핑크베놈/ BLACKPINK - Pink Venom MV ↓↓</h4>
+          <h4>↓ 블랙핑크 - 핑크베놈/ BLACKPINK - Pink Venom MV ↓</h4>
           <a href="https://www.youtube.com/watch?v=gQlMMD8auMs" target=_blank>[ https://www.youtube.com/watch?v=gQlMMD8auMs ]</a>
-          <h4>↓↓ 에스파 - 도깨비불 / aespa - Illusion ↓↓</h4>
+          <h4>↓ 에스파 - 도깨비불 / aespa - Illusion ↓</h4>
           <a href="https://www.youtube.com/watch?v=h7pDGP1XjZM">[ https://www.youtube.com/watch?v=h7pDGP1XjZM ]</a>
-          <h4>↓↓ Girls' Generation 소녀시대 'FOREVER 1' MV ↓↓</h4>
+          <h4>↓ Girls' Generation 소녀시대 'FOREVER 1' MV ↓</h4>
           <a href="https://www.youtube.com/watch?v=Qpf26PtBXgo">[ https://www.youtube.com/watch?v=Qpf26PtBXgo ]</a>
-          <h4>↓↓ [IU] '내 손을 잡아(Hold My Hand)' Live Clip ↓↓</h4>
+          <h4>↓ [IU] '내 손을 잡아(Hold My Hand)' Live Clip ↓</h4>
           <a href="https://www.youtube.com/watch?v=3iM_06QeZi8">[ https://www.youtube.com/watch?v=3iM_06QeZi8 ]</a>
-          <h4>↓↓ BTS (방탄소년단) 'Dynamite' MV ↓↓</h4>
+          <h4>↓ BTS (방탄소년단) 'Dynamite' MV ↓</h4>
           <a href="https://www.youtube.com/watch?v=gdZLi9oWNZg">[ https://www.youtube.com/watch?v=gdZLi9oWNZg ]</a>
         </div>
       </div>
