--- a/torrent.html
+++ b/torrent.html
@@ -72,32 +72,32 @@
         </div>
         <div class="center">
           <div class="box box1">
-            <a href="https://torrentqq218.com/" target=_blank>
-            <img src="./img/torrent/t-1-torrentqq.png" alt="툰코" title="툰코"></a>
+            <a href="https://torrentqq226.com/" target=_blank>
+            <img src="./img/torrent/t-1-torrentqq.png" alt="토렌트큐큐" title="토렌트큐큐"></a>
             <h3>토렌트큐큐</h3></div>
           <div class="box box2">
-            <a href="https://www.etorrent.us/" target=_blank>
-            <img src="./img/torrent/t-2-Etorrent.png" alt="펀비" title="펀비"></a>
+            <a href="https://www.etorrent3.com/" target=_blank>
+            <img src="./img/torrent/t-2-Etorrent.png" alt="e토렌트" title="e토렌트"></a>
             <h3>이토렌트</h3></div>
           <div class="box box3">
-            <a href="https://www.todawa80.top/" target=_blank>
-            <img src="./img/torrent/t-3-todawa.png" alt="뉴토끼" title="뉴토끼"></a>
+            <a href="https://www.todawa88.top/" target=_blank>
+            <img src="./img/torrent/t-3-todawa.png" alt="토다와" title="토다와"></a>
             <h3>토다와</h3></div>
           <div class="box box4">
-            <a href="https://sekt9.com/" target=_blank>
-            <img src="./img/torrent/t-4-sektorrent.png" alt="늑대닷컴" title="늑대닷컴"></a>
+            <a href="https://sekt15.com/" target=_blank>
+            <img src="./img/torrent/t-4-sektorrent.png" alt="섹토렌트" title="섹토렌트"></a>
             <h3>섹토렌트</h3></div>
           <div class="box box5">
-            <a href="https://torrent-market16.com/" target=_blank>
-            <img src="./img/torrent/t-5-torrent-mk.png" alt="섹툰" title="섹툰"></a>
+            <a href="https://torrent-market20.com/" target=_blank>
+            <img src="./img/torrent/t-5-torrent-mk.png" alt="토렌트마켓" title="토렌트마켓"></a>
             <h3>토렌트마켓</h3></div>
           <div class="box box6">
             <a href="https://www.ttking14.me/" target=_blank>
-            <img src="./img/torrent/t-6-ttking.png" alt="밤토끼" title="밤토끼"></a>
+            <img src="./img/torrent/t-6-ttking.png" alt="토렌트킹" title="토렝트킹"></a>
             <h3>토렌트킹</h3></div>
           <div class="box box7">
-            <a href="https://torrentsee123.com/" target=_blank>
-            <img src="./img/torrent/t-7-torrentsee.png" alt="블랙툰" title="블랙툰"></a>
+            <a href="https://torrentsee131.com/" target=_blank>
+            <img src="./img/torrent/t-7-torrentsee.png" alt="토렌트씨" title="토렌트6"></a>
             <h3>토렌트씨</h3></div>
         </div>
         <div class="right">
