--- a/torrent.html
+++ b/torrent.html
@@ -56,7 +56,7 @@
       <div class="btn"><a href="https://linknori.netlify.app/"><h3>WebToon</h3></a></div>
       <div class="btn"><a href="https://linknori.netlify.app/torrent.html"><h3>Torrent</h3></a></div>
       </div>
-    <h2>배너 클릭시 사이트로 연결. Update : 2022.10.17</h2>
+    <h2>배너 클릭시 사이트로 연결. Update : 2022.10.20</h2>
       <div class="main">
         <div class="left">
           <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1079694147079460"
@@ -112,6 +112,10 @@
           <a href="https://www.youtube.com/watch?v=3iM_06QeZi8">[ https://www.youtube.com/watch?v=3iM_06QeZi8 ]</a>
           <h4>↓ BTS (방탄소년단) 'Dynamite' MV ↓</h4>
           <a href="https://www.youtube.com/watch?v=gdZLi9oWNZg">[ https://www.youtube.com/watch?v=gdZLi9oWNZg ]</a>
+          <h4>↓ IVE 아이브 'After LIKE' MV ↓</h4>
+          <a href="https://www.youtube.com/watch?v=F0B7HDiY-10">[ https://www.youtube.com/watch?v=F0B7HDiY-10 ]</a>
+          <h4>↓ (여자)아이들((G)I-DLE) 'Nxde' MV ↓</h4>
+          <a href="https://www.youtube.com/watch?v=fCO7f0SmrDc">[ https://www.youtube.com/watch?v=fCO7f0SmrDc ]</a>
         </div>
       </div>
       <div class="bottom">
